<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:padding="16dp"
    tools:context=".TestActivity">

    <TextView
        android:id="@+id/text_view_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/QuestionTotal"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/text_view_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/level"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/textViewScoreTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreView"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:textSize="19sp"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/text_view_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/timerLabel"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:freezesText="true"/>

    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:text="@string/Question"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:freezesText="true"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:buttonTint="@android:color/holo_red_light"
        android:orientation="vertical"
        android:padding="19dp"
        tools:targetApi="lollipop">

        <RadioButton
            android:id="@+id/radio_ansButton1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_border"
            android:buttonTint="@android:color/white"
            android:freezesText="true"
            android:text="@string/choice1"
            android:textColor="@android:color/white"
            android:textSize="19sp"
            tools:targetApi="lollipop" />

        <RadioButton
            android:id="@+id/radio_ansButton2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_border"
            android:buttonTint="@android:color/white"
            android:freezesText="true"
            android:text="@string/choice2"
            android:textColor="@android:color/white"
            android:textSize="19sp"
            tools:targetApi="lollipop" />


        <RadioButton
            android:id="@+id/radio_ansButton3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_border"
            android:buttonTint="@android:color/white"
            android:freezesText="true"
            android:text="@string/choice3"
            android:textColor="@android:color/white"
            android:textSize="19sp"
            tools:targetApi="lollipop" />
    </RadioGroup>

    <Button
        android:id="@+id/button_next"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:drawablePadding="4dp"
        android:text="@string/nextBtn"
        android:textColor="@android:color/white"
        android:freezesText="true"
        tools:targetApi="lollipop" />

</LinearLayout>


